Added an automatic build of the FQL parser/lexer in the main build file.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@18296 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -109,6 +109,7 @@
             <ant antfile="src/org/sosy_lab/cpachecker/cpa/automaton/AutomatonBuild.xml" inheritAll="false"/>
             <echo message="Generate precision-rewriting parser if necessary" level="info"/>
             <ant antfile="src/org/sosy_lab/cpachecker/util/predicates/precisionConverter/Parser.xml" inheritAll="false"/>
+            <ant antfile="src/org/sosy_lab/cpachecker/core/algorithm/tiger/fql/parser/build.xml" inheritAll="false"/>
     </target>
 
     <target name="build-dependencies" depends="init, resolve-dependencies, build-subprojects"/>
