Experimenting with LPI configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/lpi_svcomp16@18298 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-invariants.properties
+++ b/config/policy-invariants.properties
@@ -6,5 +6,5 @@
 cpa.stator.policy.unguidedTemplateRefinement = true
 generateTemplatesUsingConvexHull = true
 
-# [cpa.loopstack]
-# loopIterationsBeforeAbstraction=1
+[cpa.loopstack]
+loopIterationsBeforeAbstraction=1
