Still experimenting with LPI + k-induction.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18320 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-invariants.properties
+++ b/config/policy-invariants.properties
@@ -1,10 +1,4 @@
 #include policy-refinement.properties
 
-# CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.policyiteration.PolicyCPA
-
-[cpa.stator.policy]
-cpa.stator.policy.unguidedTemplateRefinement = true
-generateTemplatesUsingConvexHull = true
-
-[cpa.loopstack]
-loopIterationsBeforeAbstraction=1
+# Exclude LoopstackCPA, as otherwise we would get incessant unrolling.
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.policyiteration.PolicyCPA
