Experimental configuration for LPI + ValueCPA
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18326 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-value.properties
+++ b/config/policy-value.properties
@@ -1,8 +1,34 @@
-#include policy-intervals.properties
+#include valueAnalysis.properties
 
-CompositeCPA.cpas=cpa.location.LocationCPA cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.policyiteration.PolicyCPA
+CompositeCPA.cpas=cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.policyiteration.PolicyCPA
 
-[precision]
-trackIntAddVariables=false
-trackVariablesBesidesEqAddBool=false
+specification = specification/default.spc
 
+cpa.value.refinement.restart=ROOT
+precision.sharing=scope
+cpa.value.refinement.prefixPreference=DOMAIN_GOOD_WIDTH_NARROW_SHORT
+
+cpa.reportFalseAsUnknown=true
+
+[cfa]
+findLiveVariables = true
+
+[solver]
+solver = Z3
+z3.requireProofs = false
+
+[cpa.predicate]
+ignoreIrrelevantVariables = true
+maxArrayLength = 3
+defaultArrayLength = 3
+
+[cpa.stator.policy]
+generateOctagons=false
+runCongruence = true
+joinOnMerge=false
+
+[analysis.traversal]
+order = bfs
+useCallstack = true
+useReversePostorder = true
+useReverseLoopstack = true
