Updated LPI + ValueCPA configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18335 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-value.properties
+++ b/config/policy-value.properties
@@ -4,10 +4,6 @@ CompositeCPA.cpas=cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.func
 
 specification = specification/default.spc
 
-cpa.value.refinement.restart=ROOT
-precision.sharing=scope
-cpa.value.refinement.prefixPreference=DOMAIN_GOOD_WIDTH_NARROW_SHORT
-
 cpa.reportFalseAsUnknown=true
 
 [cfa]
@@ -26,6 +22,7 @@ defaultArrayLength = 3
 generateOctagons=false
 runCongruence = true
 joinOnMerge=false
+usePreviousBounds=false
 
 [analysis.traversal]
 order = bfs
