updating configurations to match changes in CallstackCPA.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18338 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/seghirPrecondition.properties
+++ b/config/includes/seghirPrecondition.properties
@@ -1,6 +1,8 @@
 #include predicateAnalysisBackward.properties
 
-CompositeCPA.cpas = cpa.partitioning.PartitioningCPA, cpa.location.LocationCPABackwards, cpa.callstack.CallstackCPABackwards, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA
+CompositeCPA.cpas = cpa.partitioning.PartitioningCPA, cpa.location.LocationCPABackwards, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA
+
+cpa.callstack.traverseBackwards=true
 
 analysis.refinePreconditions=true
 analysis.algorithm.CEGAR=False
