LPI: Update LPI + Value configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18339 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-value.properties
+++ b/config/policy-value.properties
@@ -23,6 +23,7 @@ generateOctagons=false
 runCongruence = true
 joinOnMerge=false
 usePreviousBounds=false
+filterIntAddVars=true
 
 [analysis.traversal]
 order = bfs
