updating configurations for SV-COMP.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18341 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16.properties
+++ b/config/sv-comp16.properties
@@ -42,6 +42,9 @@ counterexample.export.assumptions.includeConstantsForPointers = false
 # Use sequential combination of analyses.
 analysis.restartAfterUnknown = true
 
+# if we find a concurrent program, we copy the CFA to avoid coliding functionnames.
+cfa.useCFACloningForMultiThreadedPrograms=true
+
 # The analyses used for (non-recursive) reachability properties.
 restartAlgorithm.configFiles = components/sv-comp16--01-valueAnalysis.properties, components/sv-comp16--02-valueAnalysis-itp.properties, components/sv-comp16--03-bmc-k-induction.properties, components/sv-comp16--04-predicateAnalysis-bitprecise.properties, components/sv-comp16--recursion.properties::if-recursive, components/sv-comp16--concurrency.properties::if-concurrent
 
