--- a/config/valueAnalysis-concurrency.properties
+++ b/config/valueAnalysis-concurrency.properties
@@ -7,7 +7,7 @@ analysis.checkCounterexamples = false
 # ARGCPA is needed for counterexample analysis
 cpa = cpa.arg.ARGCPA
 ARGCPA.cpa              = cpa.composite.CompositeCPA
-CompositeCPA.cpas       = cpa.threading.ThreadingCPA, cpa.value.ValueAnalysisCPA
+CompositeCPA.cpas       = cpa.threading.ThreadingCPA, cpa.value.ValueAnalysisCPA, cpa.pointer2.PointerCPA
 
 analysis.traversal.order               = dfs
 analysis.traversal.useReversePostorder = true
