--- a/config/valueAnalysis-concurrency.properties
+++ b/config/valueAnalysis-concurrency.properties
@@ -14,4 +14,4 @@ analysis.traversal.useReversePostorder = true
 analysis.traversal.useCallstack        = true
 
 cpa.callstack.unsupportedFunctions={}
-cfa.useCFACloning=true
+cfa.useCFACloningForMultiThreadedPrograms=true
