update options for refinement selection submission
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/refinementSelectionForABE@18362 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/refsel--sv-comp16.properties
+++ b/config/refsel--sv-comp16.properties
@@ -35,6 +35,7 @@ cpa.callstack.skipFunctionPointerRecursion = true
 # options for VA
 cpa.value.refinement.prefixPreference = DOMAIN_GOOD_WIDTH_NARROW_SHORT
 cpa.value.refinement.restart          = ROOT
+cpa.value.blk.abstractionThreshold    = 4096
 
 # options for PA
 cpa.predicate.abstraction.computation                   = BOOLEAN
@@ -42,7 +43,7 @@ cpa.predicate.blk.alwaysAtJoin                          = true
 cpa.predicate.blk.alwaysAtFunctions                     = false
 cpa.predicate.blk.alwaysAtLoops                         = true
 cpa.predicate.refinement.performInitialStaticRefinement = true
-cpa.predicate.refinement.prefixPreference               = DOMAIN_GOOD_LONG
+cpa.predicate.refinement.prefixPreference               = PIVOT_DEEP_LONG
 cpa.predicate.refinement.restartAfterRefinements        = 1
 cpa.predicate.memoryAllocationsAlwaysSucceed            = true
 cpa.predicate.precision.sharing                         = SCOPE
