tuning parameters; rename config to adhere standard naming schema
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/refinementSelectionForABE@18368 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16--refsel.properties
+++ b/config/sv-comp16--refsel.properties
@@ -27,10 +27,11 @@ counterexample.export.assumptions.includeConstantsForPointers = false
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.predicate.PredicateCPA
 
 # fixed set of option for whole analysis
-analysis.checkCounterexamples              = true
-analysis.summaryEdges                      = true
-cpa.callstack.skipVoidRecursion            = true
-cpa.callstack.skipFunctionPointerRecursion = true
+analysis.checkCounterexamples                         = true
+analysis.summaryEdges                                 = true
+cpa.callstack.skipVoidRecursion                       = true
+cpa.callstack.skipFunctionPointerRecursion            = true
+cpa.functionpointer.ignoreUnknownFunctionPointerCalls = true
 
 # options for VA
 cpa.value.refinement.prefixPreference = DOMAIN_GOOD_WIDTH_NARROW_SHORT
@@ -45,7 +46,9 @@ cpa.predicate.blk.alwaysAtLoops                         = true
 cpa.predicate.refinement.performInitialStaticRefinement = true
 cpa.predicate.refinement.prefixPreference               = PIVOT_DEEP_LONG
 cpa.predicate.refinement.restartAfterRefinements        = 1
+cpa.predicate.refinement.maxPrefixCount                 = 4
 cpa.predicate.memoryAllocationsAlwaysSucceed            = true
+cpa.predicate.defaultArrayLength                        = 1
 cpa.predicate.precision.sharing                         = SCOPE
 # make PA bit-precise
 solver.solver                                           = MathSAT5
