final update of doc, config
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/refinementSelectionForABE@18373 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16--refsel.properties
+++ b/config/sv-comp16--refsel.properties
@@ -49,6 +49,7 @@ cpa.predicate.refinement.restartAfterRefinements        = 1
 cpa.predicate.refinement.maxPrefixCount                 = 4
 cpa.predicate.memoryAllocationsAlwaysSucceed            = true
 cpa.predicate.defaultArrayLength                        = 1
+cpa.predicate.maxArrayLength                            = 5
 cpa.predicate.precision.sharing                         = SCOPE
 # make PA bit-precise
 solver.solver                                           = MathSAT5
