--- a/config/witness-validation.properties
+++ b/config/witness-validation.properties
@@ -4,6 +4,12 @@ specification = specification/sv-comp-reachability.spc
 # No multi edges during witness checking
 cfa.useMultiEdges = false
 
+# Simplified CFA is bad for witnesses
+cfa.simplifyCfa = false
+
+# CFA branch swapping is bad for witnesses
+cfa.allowBranchSwapping = false
+
 # Use sequential combination of analyses.
 analysis.restartAfterUnknown = true
 
