Remove all supplied 32bit binaries from the repository. All known users of these told us they do not need them anymore. Several of these binaries where even outdated (CBMC) or broken (JOct). For several more libraries we even never had 32bit binaries (Z3, Apron), and nobody complained.
Users who would still like to execute CPAchecker on a 32bit system
and need some of these libraries can compile them themselves and use them,
this is still supported.


git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18407 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -235,8 +235,7 @@
 		includes="*.*"
 		prefix="bin"/>
             <tarfileset dir="." filemode="755"
-                includes="lib/native/**"
-                excludes="lib/native/source/** lib/native/*win*/** lib/native/x86-linux/**"/>
+                includes="lib/native/x86_64-linux/**"/>
         </tar>
     </target>
 
