--- a/lib/ivy.xml
+++ b/lib/ivy.xml
@@ -103,8 +103,12 @@
         <dependency org="org.sosy_lab" name="vcloud" rev="${verifiercloud.version}" conf="benchmark->runtime"/>
 
         <!-- JavaSMT -->
-        <dependency org="org.sosy_lab" name="JavaSMT" rev="0.58" conf="runtime->runtime; contrib->sources" />
+        <dependency org="org.sosy_lab" name="JavaSMT" rev="0.60" conf="runtime->runtime; contrib->sources" />
 
         <!-- Solver Binaries -->
+        <dependency org="org.sosy_lab" name="JavaSMT-solver-z3" rev="z3-4.4.1-87-gad58226" conf="runtime->solver-z3" />
+        <dependency org="org.sosy_lab" name="JavaSMT-solver-mathsat" rev="5.3.7" conf="runtime->solver-mathsat" />
+        <dependency org="org.sosy_lab" name="JavaSMT-solver-optimathsat" rev="1.3.5" conf="runtime->solver-optimathsat" />
+
     </dependencies>
 </ivy-module>
