Rename and refactoring of RealCChecker to ConcretePathExecutionChecker. Integrated ideas of codeGen branch.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18431 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/valueAnalysis-ConcreteCounterexampleCheck.properties
+++ b/config/valueAnalysis-ConcreteCounterexampleCheck.properties
@@ -2,7 +2,7 @@
 # This configuration file uses value analysis of local integer
 # variables in a model-checking configuration.
 # Certain variables (__SELECTED_FEATURE_*) are instead tracked with BDDs (with the BDDCPA).
-# Found errors are cross-checked by CBMC.
+# Found errors are cross-checked by executing the concrete counterexample program.
 # ------------------------------------------------------------------
 
 # ARGCPA is needed for counterexample analysis
@@ -16,10 +16,7 @@ analysis.checkCounterexamples = true
 analysis.algorithm.CEGAR = true
 cegar.refiner = cpa.predicate.PredicateRefiner
 
-counterexample.checker = REALC
-cpa.arg.errorPath.codeStyle = REALC
-realC.dumpRealCfile = RealC_counterexample.c
-realC.pathToCompiler = gcc
+counterexample.checker = CONCRETE_EXECUTION
 
 counterexample.continueAfterInfeasibleError = true
 analysis.stopAfterError=false
