--- a/lib/ivy.xml
+++ b/lib/ivy.xml
@@ -28,7 +28,7 @@
     <dependencies>
 
         <!-- SoSy-Lab Common Library -->
-        <dependency org="org.sosy_lab" name="common" rev="0.553" conf="runtime->runtime; contrib->sources"/>
+        <dependency org="org.sosy_lab" name="common" rev="0.583" conf="runtime->runtime; contrib->sources"/>
 
         <!-- Google Core Libraries for Java
              Contains a lot of helpful data structures. -->
@@ -103,12 +103,12 @@
         <dependency org="org.sosy_lab" name="vcloud" rev="${verifiercloud.version}" conf="benchmark->runtime"/>
 
         <!-- JavaSMT -->
-        <dependency org="org.sosy_lab" name="JavaSMT" rev="0.63" conf="runtime->runtime; contrib->sources" />
+        <dependency org="org.sosy_lab" name="javasmt" rev="0.1-3-g7796955" conf="runtime->runtime; contrib->sources" />
 
         <!-- Solver Binaries -->
-        <dependency org="org.sosy_lab" name="JavaSMT-solver-z3" rev="z3-4.4.1-87-gad58226" conf="runtime->solver-z3" />
-        <dependency org="org.sosy_lab" name="JavaSMT-solver-mathsat" rev="5.3.7" conf="runtime->solver-mathsat" />
-        <dependency org="org.sosy_lab" name="JavaSMT-solver-optimathsat" rev="1.3.5" conf="runtime->solver-optimathsat" />
+        <dependency org="org.sosy_lab" name="javasmt-solver-z3" rev="z3-4.4.1-87-gad58226" conf="runtime->solver-z3" />
+        <dependency org="org.sosy_lab" name="javasmt-solver-mathsat" rev="5.3.7" conf="runtime->solver-mathsat" />
+        <dependency org="org.sosy_lab" name="javasmt-solver-optimathsat" rev="1.3.5" conf="runtime->solver-optimathsat" />
 
     </dependencies>
 </ivy-module>
