LPI: New iteration order. Advantageous for !joinOnMerge.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18536 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy.properties
+++ b/config/policy.properties
@@ -27,9 +27,7 @@ runCongruence = true
 # Picking a correct order is incredibly important and can mean >100x difference
 # in performance.
 [analysis.traversal]
-order = bfs
+order = dfs
 useCallstack = true
 useReversePostorder = true
-
-# Seems to make a (very marginal) difference.
-useReverseLoopstack = true
+useLoopstack = true
