New LPI + Value configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18611 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-value.properties
+++ b/config/policy-value.properties
@@ -21,12 +21,11 @@ defaultArrayLength = 3
 [cpa.stator.policy]
 generateOctagons=false
 runCongruence = true
-joinOnMerge=false
-usePreviousBounds=false
 filterIntAddVars=true
+generateFromStatements=false
 
 [analysis.traversal]
-order = bfs
+order = dfs
 useCallstack = true
 useReversePostorder = true
-useReverseLoopstack = true
+useLoopstack = true
