--- a/config/policy-value.properties
+++ b/config/policy-value.properties
@@ -1,10 +1,12 @@
 #include valueAnalysis.properties
 
-CompositeCPA.cpas=cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.policyiteration.PolicyCPA
+CompositeCPA.cpas=cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.loopstack.LoopstackCPA, cpa.value.ValueAnalysisCPA, cpa.policyiteration.PolicyCPA
 
 specification = specification/default.spc
 
 cpa.reportFalseAsUnknown=true
+
+cpa.loopstack.loopIterationsBeforeAbstraction=1
 
 [cfa]
 findLiveVariables = true
