updating config for value+concurrency.
Using ReversePostorder for interleaving threads is currently not supported.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18627 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/valueAnalysis-concurrency.properties
+++ b/config/valueAnalysis-concurrency.properties
@@ -10,7 +10,7 @@ ARGCPA.cpa              = cpa.composite.CompositeCPA
 CompositeCPA.cpas       = cpa.threading.ThreadingCPA, cpa.value.ValueAnalysisCPA, cpa.pointer2.PointerCPA
 
 analysis.traversal.order               = dfs
-analysis.traversal.useReversePostorder = true
+analysis.traversal.useReversePostorder = false
 analysis.traversal.useCallstack        = true
 
 cpa.callstack.unsupportedFunctions={}
