Also use push notifications from server in cpa_web_cloud.py and witness_validation_web_cloud.py.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18638 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -241,10 +241,16 @@
 
     <target name="build-witness-script" description="Build the script for witness validation as single file">
         <property name="witness-script" value="scripts/witness_validation_web_cloud"/>
+        <fileset dir="." includes="lib/python-benchmark/sseclient-*.whl" id="sseclient.file"/>
+        <fileset dir="." includes="lib/python-benchmark/requests-*.whl" id="requests.file"/>
+        <fileset dir="." includes="lib/python-benchmark/six-*.whl" id="six.file"/>
         <!-- Write ZIP archive to witness.zip, write script header to witness.sh, and concatenate. -->
         <zip destfile="${witness-script}.zip" whenempty="fail" duplicate="fail">
             <zipfileset dir="scripts" includes="witness_validation_web_cloud.py" fullpath="__main__.py" />
             <zipfileset dir="scripts" includes="benchmark/__init__.py benchmark/webclient.py" />
+            <zipfileset src="${toString:sseclient.file}" />
+            <zipfileset src="${toString:requests.file}" />
+            <zipfileset src="${toString:six.file}" />
         </zip>
         <echo file="${witness-script}.sh">#!/usr/bin/python3${line.separator}</echo>
         <concat binary="true" destfile="${witness-script}.pyz">
