--- a/config/policy-slicing.properties
+++ b/config/policy-slicing.properties
@@ -2,11 +2,11 @@
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.loopstack.LoopstackCPA, cpa.formulaslicing.FormulaSlicingCPA, cpa.policyiteration.PolicyCPA
 
-
-analysis.traversal.useReverseLoopstack=true
-cpa.slicing.joinOnMerge=false
+[cpa.slicing]
+checkTargetStates=false
+runDestructiveSlicing=false
+runSyntacticSlicing=true
 
 [cpa.stator.policy]
-wideningThreshold = 0
-joinOnMerge=false
+wideningThreshold=1
 runCongruence=false
