--- a/config/policy.properties
+++ b/config/policy.properties
@@ -19,6 +19,7 @@ z3.requireProofs = false
 ignoreIrrelevantVariables = true
 maxArrayLength = 3
 defaultArrayLength = 3
+cpa.predicate.simplifyGeneratedPathFormulas=true
 
 [cpa.stator.policy]
 generateOctagons=true
