Update LPI + slicing configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18657 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-slicing.properties
+++ b/config/policy-slicing.properties
@@ -7,6 +7,9 @@ checkTargetStates=false
 runDestructiveSlicing=false
 runSyntacticSlicing=true
 
+# LBE transformation does not make a difference for syntactic slicing.
+applyLBETransformation=false
+
 [cpa.stator.policy]
 wideningThreshold=1
 runCongruence=false
