--- a/config/valueAnalysis-concurrency.properties
+++ b/config/valueAnalysis-concurrency.properties
@@ -1,10 +1,14 @@
+# ########################################################################
+# This configuration uses the value-analysis to verify concurrent programs.
+# The current internal limit for the number of parallel threads is 5.
+# We use CFA-cloning to have separate CFAs for each thread.
+# ########################################################################
 
 #include valueAnalysis-NoRefiner.properties
 
 cfa.useMultiEdges  = false
 analysis.checkCounterexamples = false
 
-# ARGCPA is needed for counterexample analysis
 cpa = cpa.arg.ARGCPA
 ARGCPA.cpa              = cpa.composite.CompositeCPA
 CompositeCPA.cpas       = cpa.threading.ThreadingCPA, cpa.value.ValueAnalysisCPA, cpa.pointer2.PointerCPA
@@ -15,3 +19,14 @@ analysis.traversal.useCallstack        = true
 
 cpa.callstack.unsupportedFunctions={}
 cfa.useCFACloningForMultiThreadedPrograms=true
+
+
+# ########################################################################
+# The following two options are disabled.
+# They would allow to use value-analysis with refinement.
+# For the concurrent files from SV-COMP'16,
+# there is currently no benefit from the refinement.
+# ########################################################################
+
+# analysis.algorithm.CEGAR               = true
+# cegar.refiner                          = cpa.value.refiner.ValueAnalysisRefiner
