Sync build environment with SoSy-Lab Common. This provides the ant target format-diff. Before comitting, you can run "ant format-diff" to get your new code nicely formatted without affecting existing code. Git users need to stage their changes with "git add" first.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18727 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
     <import file="build/build-compile.xml"/>
     <import file="build/build-jar.xml"/>
     <import file="build/build-junit.xml"/>
+    <import file="build/build-format-source.xml"/>
     <import file="build/build-findbugs.xml"/>
 
     <property name="version.file" value="${class.dir}/org/sosy_lab/cpachecker/VERSION.txt"/>
