--- a/lib/ivy.xml
+++ b/lib/ivy.xml
@@ -95,6 +95,10 @@
         <dependency org="com.google.errorprone" name="error_prone_ant" rev="2.0.5" transitive="false" conf="build->default" />
         <dependency org="com.google.errorprone" name="error_prone_annotations" rev="2.0.5" conf="build->default; contrib->sources" />
 
+        <!-- google-java-format
+             A source-code formatter for Java -->
+        <dependency org="com.google.google-java-format" name="google-java-format" rev="0.1-SNAPSHOT-104-g79b7f0f" conf="build->runtime"/>
+
         <!-- FindBugs -->
         <dependency org="com.google.code.findbugs" name="findbugs" rev="3.0.1" conf="findbugs->default"/>
         <dependency org="com.google.code.findbugs" name="annotations" rev="3.0.0" conf="build->default"/>
