--- a/config/valueAnalysis-Cegar-Optimized.properties
+++ b/config/valueAnalysis-Cegar-Optimized.properties
@@ -2,7 +2,7 @@
 # This is based on a value analysis in a model-checking configuration,
 # where recursion is ignore, counterexample-checks are not performed,
 # and CEGAR is based on lazy-abstraction.
-#
+# ---
 # This adds configures the CEGAR component to be eager, and also enables
 # several optimizations for the interpolation procedure.
 # ----------------------------------------------------------------------
@@ -10,7 +10,7 @@
 #include valueAnalysis-Cegar.properties
 
 cpa.value.refinement.restart           = ROOT
-precision.sharing                      = scoped
+precision.sharing                      = scope
 
 cpa.value.interpolation.applyItpEqualityOptimization = true
 cpa.value.interpolation.applyRenamingOptimization    = true
