--- a/config/variabilityAwareAbstRefinement.properties
+++ b/config/variabilityAwareAbstRefinement.properties
@@ -22,6 +22,13 @@ cpa.predicate.memoryAllocationsAlwaysSucceed = true
 # New heuristic for cillified files: pre-populate small structures with all their fields
 cpa.predicate.maxPreFilledAllocationSize = 0
 
+# We will not make use of the strategy for guessing predicates.
+# 	This makes the discussion of experimental results harder.
+cpa.predicate.refinement.performInitialStaticRefinement = false
+
+cpa.predicate.useNondetFlags=true
+
+
 # Use the Tiger Algorithm
 analysis.algorithm.tiger = true
 tiger.tiger_with_presenceConditions = true
@@ -50,6 +57,3 @@ tiger.algorithmConfigurationFile = ./tiger-internal-algorithm---pred-refiner.pro
 analysis.algorithm.CEGAR = true
 cegar.refiner = cpa.predicate.PredicateRefiner
 
-# We will not make use of the strategy for guessing predicates.
-# 	This makes the discussion of experimental results harder.
-cpa.predicate.refinement.performInitialStaticRefinement = false
