more tiger configs
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@18859 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-variants-value.properties
+++ b/config/tiger-variants-value.properties
@@ -6,7 +6,7 @@
 cpa = cpa.arg.ARGCPA
 ARGCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.value.ValueAnalysisCPA
 
 # Enable MultiEdges, this gives a little bit of performance.
 # Do not switch on yet! It will cause wrong results.
