Update Eclipse project config
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18908 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.classpath
+++ b/.classpath
@@ -37,5 +37,10 @@
 	<classpathentry kind="lib" path="lib/java/runtime/scala-library.jar"/>
 	<classpathentry kind="lib" path="lib/java/runtime/scala-actors.jar"/>
 	<classpathentry kind="lib" path="lib/java/runtime/javasmt.jar" sourcepath="lib/java-contrib/javasmt-sources.jar"/>
+	<classpathentry kind="src" path=".apt-generated">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
