fixed variability-aware tiger property files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@18956 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-variabilityAware-value.properties
+++ b/config/tiger-variabilityAware-value.properties
@@ -1,4 +1,4 @@
-#include tiger_variants-value.properties
+#include tiger-variants-value.properties
 
 # ##########################
 # CPAchecker configuration #
