--- a/config/tiger-variabilityAware.properties
+++ b/config/tiger-variabilityAware.properties
@@ -1,4 +1,4 @@
-#include tiger_variants.properties
+#include tiger-variants.properties
 
 # ##########################
 # CPAchecker configuration #
