Update library dependencies.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@19025 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -158,6 +158,7 @@
             <classpath refid="classpath"/>
             <jvmarg value="-Djava.library.path=lib/native/${architecture}-${os}/"/>
 
+            <arg value="-includeLibraryOptions"/>
             <!-- "-v" is a optional param for verbose output of OptionCollector -->
             <!-- <arg value="-v"/> -->
         </java>
