--- a/lib/ivy.xml
+++ b/lib/ivy.xml
@@ -28,11 +28,11 @@
     <dependencies>
 
         <!-- SoSy-Lab Common Library -->
-        <dependency org="org.sosy_lab" name="common" rev="0.1000-4-g49356b7" conf="runtime->runtime; contrib->sources"/>
+        <dependency org="org.sosy_lab" name="common" rev="0.1000-30-gdf43a3c" conf="runtime->runtime; contrib->sources"/>
 
         <!-- Google Core Libraries for Java
              Contains a lot of helpful data structures. -->
-        <dependency org="com.google.guava" name="guava" rev="18.0" conf="runtime->default; contrib->sources"/>
+        <dependency org="com.google.guava" name="guava" rev="19.0" conf="runtime->default; contrib->sources"/>
 
         <!-- JavaBDD
              Java BDD library for predicate abstraction (uses CUDD). -->
@@ -68,10 +68,10 @@
 
         <!-- Truth
              Library for writing literal assertions. -->
-        <dependency org="com.google.truth" name="truth" rev="0.27" conf="test->default; contrib->sources"/>
+        <dependency org="com.google.truth" name="truth" rev="0.28" conf="test->default; contrib->sources"/>
 
         <!--  Guava-testlib contains many useful testing utilities -->
-        <dependency org="com.google.guava" name="guava-testlib" rev="18.0" conf="test->default; contrib->sources"/>
+        <dependency org="com.google.guava" name="guava-testlib" rev="19.0" conf="test->default; contrib->sources"/>
 
         <!-- Eclipse CDT and JDT
              Used for parsing C and Java code. -->
@@ -114,5 +114,7 @@
         <dependency org="org.sosy_lab" name="javasmt-solver-mathsat" rev="5.3.7" conf="runtime->solver-mathsat" />
         <dependency org="org.sosy_lab" name="javasmt-solver-optimathsat" rev="1.3.5" conf="runtime->solver-optimathsat" />
 
+        <!-- Guava has a dependency on error_prone_annotations without a revision number, need an override. -->
+        <override org="com.google.errorprone" module="error_prone_annotations" rev="2.0.5"/>
     </dependencies>
 </ivy-module>
