--- a/config/components/sv-comp16--02-valueAnalysis-itp.properties
+++ b/config/components/sv-comp16--02-valueAnalysis-itp.properties
@@ -20,4 +20,4 @@ limits.time.cpu = 60s
 # refinement selection options
 cpa.value.refinement.restart=ROOT
 precision.sharing=scope
-cpa.value.refinement.prefixPreference=DOMAIN_GOOD_WIDTH_NARROW_SHORT
+cpa.value.refinement.prefixPreference=DOMAIN_MIN,_WIDTH_MIN,LENGTH_MIN
