--- a/config/includes/predicateAnalysis.properties
+++ b/config/includes/predicateAnalysis.properties
@@ -10,7 +10,7 @@ analysis.algorithm.CEGAR = true
 cpa = cpa.arg.ARGCPA
 ARGCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.loopstats.LoopstatsCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.coverage.CoverageCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.coverage.CoverageCPA
 
 # this automaton defines which locations are the error locations
 specification = ../specification/default.spc
