MPA config updated
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@19125 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -4,6 +4,9 @@ predicate.predmap.file=precision.prec
 cpa.predicate.refinement.predicateBasisStrategy=ALL
 cpa.predicate.precision.sharing=GLOBAL
 
+# This is necessary for supporting encoding of properties with the abstract domain of the analysis
+cpa.predicate.ignoreIrrelevantVariables=false
+
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
 coverage.mode=REACHED
