--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -37,9 +37,13 @@ cpa.automaton.prec.targetHandledAfterViolations=1
 # No bound on the number of refinements per property!
 cpa.automaton.prec.targetDisabledAfterRefinements=0
 
-# Automata with a 'split' perform a transition 
-#   to 'inactive' themselves (in combination with a SAT check)
-cpa.automaton.prec.onHandledTarget=BOTTOM
+# Our automata do not perform a 'split' on target states.
+#   Target states are always abstraction locations.
+#   Using a transition to 'INACTIVE' in combination with 
+#   automata that split at target locations could result 
+#   in wrong safety proofs (if no feasibility check is 
+#   performed for the split branch).
+cpa.automaton.prec.onHandledTarget=INACTIVE
 
 cpa.automaton.stopAfterOneFeasiblePathPerProperty=false
 
