--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -47,5 +47,6 @@ cpa.automaton.prec.onHandledTarget=INACTIVE
 
 cpa.automaton.stopAfterOneFeasiblePathPerProperty=false
 
-cpa.predicate.solver=MATHSAT5
+# MathSat5 is not good for solving queries with encoded properties
+cpa.predicate.solver=SMTINTERPOL
 
