--- a/config/mpa-predicate-abelf.properties
+++ b/config/mpa-predicate-abelf.properties
@@ -28,5 +28,6 @@ cpa.automaton.prec.targetHandledAfterViolations=1
 cpa.automaton.prec.onHandledTarget=BOTTOM
 cpa.automaton.stopAfterOneFeasiblePathPerProperty=false
 
-cpa.predicate.solver=MATHSAT5
+# MathSat5 is better for model enumeration, but not better for solving the queries
+cpa.predicate.solver=SMTINTERPOL
 
