fixed tiger configurations.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@19254 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-variabilityAware-value.properties
+++ b/config/tiger-variabilityAware-value.properties
@@ -4,7 +4,7 @@
 # CPAchecker configuration #
 # ##########################
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.bdd.BDDCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.value.ValueAnalysisCPA, cpa.bdd.BDDCPA
 
 ValueAnalysisCPA.precision.variableBlacklist = (\w)*__SELECTED_FEATURE_(\w)*
 ValueAnalysisCPA.precision.trackBooleanVariables = true
