--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -1,10 +1,6 @@
 cpa.predicate.refinement.performInitialStaticRefinement=false
-cpa.predicate.predmap.export=true
-predicate.predmap.file=precision.prec
-cpa.predicate.refinement.predicateBasisStrategy=ALL
-cpa.predicate.precision.sharing=GLOBAL
-
-cpa.predicate.ignoreIrrelevantVariables=true
+# cpa.predicate.refinement.predicateBasisStrategy=ALL
+# cpa.predicate.precision.sharing=GLOBAL
 
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
@@ -23,7 +19,6 @@ analysis.checkMultipleProperties=true
 cfa.useMultiEdges=false
 
 cpa.automaton.prec.localPrecisionUpdate=true
-
 cpa.automaton.breakOnTargetState=1
 cpa.automaton.merge.onTop=false
 cpa.automaton.merge.onInactive=true
