--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -1,6 +1,6 @@
 cpa.predicate.refinement.performInitialStaticRefinement=false
 # cpa.predicate.refinement.predicateBasisStrategy=ALL
-# cpa.predicate.precision.sharing=GLOBAL
+cpa.predicate.precision.sharing=SCOPE
 
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
@@ -21,15 +21,11 @@ cfa.useMultiEdges=false
 cpa.automaton.prec.localPrecisionUpdate=true
 cpa.automaton.breakOnTargetState=1
 cpa.automaton.merge.onTop=false
-cpa.automaton.merge.onInactive=true
 
 # Do not disable properties within the precision adjustment
 #   based on the number of violations! 
 #   This is done by the MPA algorithm itself.
-cpa.automaton.prec.targetHandledAfterViolations=1
-
-# No bound on the number of refinements per property!
-cpa.automaton.prec.targetDisabledAfterRefinements=0
+cpa.automaton.prec.limit.violations=1
 
 # Our automata do not perform a 'split' on target states.
 #   Target states are always abstraction locations.
@@ -41,7 +37,5 @@ cpa.automaton.prec.onHandledTarget=INACTIVE
 
 cpa.automaton.stopAfterOneFeasiblePathPerProperty=false
 
-# MathSat5 is not good for solving queries with encoded properties
-cpa.predicate.solver=SMTINTERPOL
-
+cpa.predicate.solver=MATHSAT5
 
