Fixed bmc-invgen config which is used for generating invariants for refinement in predicate analysis. With this change we switch from SMTInterpol to Mathsat5 as for some reasons, SMTInterpol has problems with either not or wrongly loaded classes and thus crashes.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@19332 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/bmc-invgen.properties
+++ b/config/bmc-invgen.properties
@@ -23,5 +23,6 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
     predicate.encodeFloatAs = RATIONAL
     callstack.depth=1
 
-solver.solver = SMTInterpol
+[]
+solver.solver = MATHSAT5
 cfa.transformIntoSingleLoop = false
