Sharing of predicates
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@19481 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -1,6 +1,6 @@
 cpa.predicate.refinement.performInitialStaticRefinement=false
-# cpa.predicate.refinement.predicateBasisStrategy=ALL
-cpa.predicate.precision.sharing=SCOPE
+cpa.predicate.refinement.predicateBasisStrategy=ALL
+cpa.predicate.precision.sharing=GLOBAL
 
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
