--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -1,6 +1,7 @@
 cpa.predicate.refinement.performInitialStaticRefinement=false
 cpa.predicate.refinement.predicateBasisStrategy=ALL
 cpa.predicate.precision.sharing=GLOBAL
+cpa.predicate.refinement.sharePredicates=true
 
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
