--- a/config/includes/spa-predicate-ABElf.properties
+++ b/config/includes/spa-predicate-ABElf.properties
@@ -7,3 +7,5 @@ cpa.predicate.precision.sharing=GLOBAL
 cpa.predicate.refinement.sharePredicates=true
 cpa.predicate.refinement.avoidRootsWithSeveralSiblings=true
 cpa.predicate.refinement.performInitialStaticRefinement=false 
+
+analysis.checkCounterexamples=false
