Updated the spa/mpa configs
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@19544 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -2,6 +2,7 @@ cpa.predicate.refinement.performInitialStaticRefinement=false
 cpa.predicate.refinement.predicateBasisStrategy=ALL
 cpa.predicate.precision.sharing=SCOPE
 cpa.predicate.refinement.sharePredicates=true
+cpa.predicate.solver=MATHSAT5
 
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
@@ -19,7 +20,6 @@ analysis.checkMultipleProperties=true
 #   of the ControlAutomataCPA (bug/broken implementation)
 cfa.useMultiEdges=false
 
-cpa.automaton.prec.localPrecisionUpdate=true
 cpa.automaton.breakOnTargetState=1
 cpa.automaton.merge.onTop=false
 
@@ -28,15 +28,8 @@ cpa.automaton.merge.onTop=false
 #   This is done by the MPA algorithm itself.
 cpa.automaton.prec.limit.violations=1
 
-# Our automata do not perform a 'split' on target states.
-#   Target states are always abstraction locations.
-#   Using a transition to 'INACTIVE' in combination with 
-#   automata that split at target locations could result 
-#   in wrong safety proofs (if no feasibility check is 
-#   performed for the split branch).
-cpa.automaton.prec.onHandledTarget=INACTIVE
+cpa.automaton.prec.onHandledTarget=BOTTOM
+cpa.automaton.splitOnTargetStatesToInactive=true
 
 cpa.automaton.stopAfterOneFeasiblePathPerProperty=false
-
-cpa.predicate.solver=MATHSAT5
 
