--- a/config/includes/spa-predicate-ABElf.properties
+++ b/config/includes/spa-predicate-ABElf.properties
@@ -3,7 +3,7 @@
 #include predicateAnalysis-PredAbsRefiner.properties
 
 cpa.predicate.refinement.predicateBasisStrategy=ALL
-cpa.predicate.precision.sharing=GLOBAL
+cpa.predicate.precision.sharing=SCOPE
 cpa.predicate.refinement.sharePredicates=true
 cpa.predicate.refinement.avoidRootsWithSeveralSiblings=true
 cpa.predicate.refinement.performInitialStaticRefinement=false 
