--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -2,7 +2,7 @@ cpa.predicate.refinement.performInitialStaticRefinement=false
 cpa.predicate.refinement.predicateBasisStrategy=ALL
 cpa.predicate.precision.sharing=SCOPE
 cpa.predicate.refinement.sharePredicates=true
-cpa.predicate.solver=MATHSAT5
+cpa.predicate.solver=SMTINTERPOL
 
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
