Do not use multi edges for SPA!!
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@19594 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/spa-predicate-ABEl.properties
+++ b/config/includes/spa-predicate-ABEl.properties
@@ -1,11 +1,3 @@
-
 #include predicateAnalysis-ABEl.properties
 #include predicateAnalysis-PredAbsRefiner.properties
-
-cpa.predicate.refinement.predicateBasisStrategy=ALL
-cpa.predicate.precision.sharing=SCOPE
-cpa.predicate.refinement.sharePredicates=true
-cpa.predicate.refinement.avoidRootsWithSeveralSiblings=true
-cpa.predicate.refinement.performInitialStaticRefinement=false 
-
-analysis.checkCounterexamples=false
+#include spa-predicate.properties
